2003-09-05  JMB  Toolbar button preferences

    Similar to the menu preferences, there is a new tab in the preferences
    dialog which allows selection and ordering of the buttons to be shown
    in the toolbar.  Current options are Save, Add, Edit, Copy, Delete, and
    Quick Filter.

2003-09-04  JMB  Menu layout preferences

    You can now choose which among the Row, View, Sort, and Filter menus
    you want to appear as top-level menus and which you want to put as
    submenus under the File menu instead.  You can also choose the order
    in which to arrange these menus.  There is a new tab in the preferences
    dialog for configuring this.

2003-09-03  JMB  Added non-paged display option

    Added a new checkbox in the preferences dialog which allows you to turn
    off paging in the data viewer, so all rows in the current filter are
    displayed on one page and the row of navigation buttons is hidden.

2003-09-02  JMB  Windows titlebars fix, code cleanup

    Added " - Qt" to the end of all window titles in the Windows version so
    they will be displayed properly in the non-commercial version of Qt
    (so the "title labels" at the top of each window in previous versions
    added to work around this problem have been removed).

    Also reorganized some of the code to make it smaller and easier to
    maintain; this also eliminates some duplication in the translation files.

2003-08-31  #################### PortaBase 1.8 ####################

2003-08-21  JMB  Fixed Zaurus encryption bug

    I think I finally found the cause of the crash on opening some encrypted
    files on the Zaurus and fixed it.

2003-08-20  JMB  Better save icon for SL-C7x0 series

    Added a larger version of the save icon for use on the 640x480 display
    of the Zaurus SL-C7x0 models.

2003-08-19  JMB  French UI update, file creation bugfix, Japanese help fix

    Incorporated the latest UI updates from Eric Santonacci, and fixed a