@@ -58,7 +58,8 @@ HEADERS         = portabase.h \
                   calc/calceditor.h \
                   calc/calcwidget.h \
                   fileselector.h \
-                  pbdialog.h
+                  pbdialog.h \
+                  calc/calctimeeditor.h
 SOURCES         = main.cpp \
                   portabase.cpp \
                   inputdialog.cpp \
@@ -108,4 +109,5 @@ SOURCES         = main.cpp \
                   calc/calceditor.cpp \
                   calc/calcwidget.cpp \
                   fileselector.cpp \
-                  pbdialog.cpp
+                  pbdialog.cpp \
+                  calc/calctimeeditor.cpp
