@@ -61,7 +61,8 @@ HEADERS         = portabase.h \
                   calc/calceditor.h \
                   calc/calcwidget.h \
                   sharp/fileselector.h \
-                  pbdialog.h
+                  pbdialog.h \
+                  calc/calctimeeditor.h
 SOURCES         = main.cpp \
                   portabase.cpp \
                   inputdialog.cpp \
@@ -111,4 +112,5 @@ SOURCES         = main.cpp \
                   calc/calceditor.cpp \
                   calc/calcwidget.cpp \
                   sharp/fileselector.cpp \
-                  pbdialog.cpp
+                  pbdialog.cpp \
+                  calc/calctimeeditor.cpp
