@@ -64,7 +64,8 @@ HEADERS         = portabase.h \
                   calc/calceditor.h \
                   calc/calcwidget.h \
                   desktop/newfiledialog.h \
-                  pbdialog.h
+                  pbdialog.h \
+                  calc/calctimeeditor.h
 SOURCES         = main.cpp \
                   portabase.cpp \
                   view.cpp \
@@ -120,4 +121,5 @@ SOURCES         = main.cpp \
                   calc/calceditor.cpp \
                   calc/calcwidget.cpp \
                   desktop/newfiledialog.cpp \
-                  pbdialog.cpp
+                  pbdialog.cpp \
+                  calc/calctimeeditor.cpp
